; ModuleID = '/home/carl/AnghaBench/reactos/ntoskrnl/kd/wrappers/extr_gdbstub.c_GspRemoveSwBreakpoint.c'
source_filename = "/home/carl/AnghaBench/reactos/ntoskrnl/kd/wrappers/extr_gdbstub.c_GspRemoveSwBreakpoint.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@.str = private unnamed_addr constant [29 x i8] c"GspRemoveSwBreakpoint(0x%p)\0A\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"Found match at index %u\0A\00", align 1
@GspSwBreakpoints = common dso_local global %struct.TYPE_4__* null, align 8
@GspSwBreakpointCount = common dso_local global i64 0, align 8
@GspOutBuffer = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [3 x i8] c"OK\00", align 1
@.str.3 = private unnamed_addr constant [11 x i8] c"Not found\0A\00", align 1
@.str.4 = private unnamed_addr constant [4 x i8] c"E22\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @GspRemoveSwBreakpoint to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @GspRemoveSwBreakpoint(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = call i32 @DPRINT(i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str, i64 0, i64 0), i64 %4)
  %6 = load i64, i64* %2, align 8
  %7 = call i64 @GspFindSwBreakpoint(i64 %6, i64* %3)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %44

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = call i32 @DPRINT(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i64 %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @GspSwBreakpoints, align 8
  %13 = load i64, i64* %3, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i64 %13
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = icmp ne i32 %16, 0
  %18 = xor i1 %17, true
  %19 = zext i1 %18 to i32
  %20 = call i32 @ASSERT(i32 %19)
  %21 = load i64, i64* %3, align 8
  %22 = add i64 %21, 1
  %23 = load i64, i64* @GspSwBreakpointCount, align 8
  %24 = icmp ult i64 %22, %23
  br i1 %24, label %25, label %39

25:                                               ; preds = %9
  %26 = load %struct.TYPE_4__*, %struct.TYPE_4__** @GspSwBreakpoints, align 8
  %27 = load i64, i64* %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %26, i64 %27
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** @GspSwBreakpoints, align 8
  %30 = load i64, i64* %3, align 8
  %31 = add i64 %30, 1
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i64 %31
  %33 = load i64, i64* @GspSwBreakpointCount, align 8
  %34 = load i64, i64* %3, align 8
  %35 = sub i64 %33, %34
  %36 = sub i64 %35, 1
  %37 = mul i64 %36, 4
  %38 = call i32 @memmove(%struct.TYPE_4__* %28, %struct.TYPE_4__* %32, i64 %37)
  br label %39

39:                                               ; preds = %25, %9
  %40 = load i64, i64* @GspSwBreakpointCount, align 8
  %41 = add i64 %40, -1
  store i64 %41, i64* @GspSwBreakpointCount, align 8
  %42 = load i32, i32* @GspOutBuffer, align 4
  %43 = call i32 @strcpy(i32 %42, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.2, i64 0, i64 0))
  br label %48

44:                                               ; preds = %1
  %45 = call i32 @DPRINT1(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0))
  %46 = load i32, i32* @GspOutBuffer, align 4
  %47 = call i32 @strcpy(i32 %46, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.4, i64 0, i64 0))
  br label %48

48:                                               ; preds = %44, %39
  ret void
}

declare dso_local i32 @DPRINT(i8*, i64) #1

declare dso_local i64 @GspFindSwBreakpoint(i64, i64*) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @memmove(%struct.TYPE_4__*, %struct.TYPE_4__*, i64) #1

declare dso_local i32 @strcpy(i32, i8*) #1

declare dso_local i32 @DPRINT1(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
